--- a/src/index.html
+++ b/src/index.html
@@ -32,36 +32,220 @@
     </header>
 
     <main>
-    <section class="section-about">
-
-      <div class="center-text margin-bottom-big">
+      <section class="section-about">
+        <div class="center-text margin-bottom-big">
           <h2 class="heading-secondary">
-              Exciting tours for adventures people
-            </h2>
-      </div>
-      <div class="row">
+            Exciting tours for adventures people
+          </h2>
+        </div>
+        <div class="row">
           <div class="col-1-of-2">
-           <h3 class="heading-tertiary margin-bottom-small">You're going to fall in love with nature</h3>
-           <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis quos excepturi illo ipsam earum libero magnam minima explicabo, repudiandae alias sequi reprehenderit porro nemo labore, culpa delectus quia nisi? Expedita?</p>
+            <h3 class="heading-tertiary margin-bottom-small">
+              You're going to fall in love with nature
+            </h3>
+            <p class="paragraph">
+              Inspirational, benefit corporation, catalyze, social return on
+              investment technology outcomes. Philanthropy transparent, black
+              lives matter leverage thought partnership expose the truth
+              collaborative consumption thought leader systems thinking.
+            </p>
 
-           <h3 class="heading-tertiary margin-bottom-small">Live adventures like you never have before</h3>
-           <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis quos excepturi illo ipsam earum libero magnam minima explicabo, repudiandae alias sequi reprehenderit porro nemo labore, culpa delectus quia nisi? Expedita?</p>
+            <h3 class="heading-tertiary margin-bottom-small">
+              Live adventures like you never have before
+            </h3>
+            <p class="paragraph">
+              Vibrant, when capacity building collaborative consumption
+              framework incubator. To B-corp, corporate social responsibility
+              external partners social impact revolutionary.
+            </p>
 
-           <a href="#" class="btn-text">Learn more &rarr;</a>
-
-           
+            <a href="#" class="btn-text">Learn more &rarr;</a>
           </div>
           <div class="col-1-of-2">
-          <div class="composition">
-            <img src="img/nat-1.jpg" alt="Photo 1" class="composition__photo  composition__photo--p1">
-            <img src="img/nat-2.jpg" alt="Photo 2" class="composition__photo  composition__photo--p2">
-            <img src="img/nat-3.jpg" alt="Photo 3" class="composition__photo composition__photo--p3">
-          </div>
+            <div class="composition">
+              <img
+                src="img/nat-1.jpg"
+                alt="Photo 1"
+                class="composition__photo  composition__photo--p1"
+              />
+              <img
+                src="img/nat-2.jpg"
+                alt="Photo 2"
+                class="composition__photo  composition__photo--p2"
+              />
+              <img
+                src="img/nat-3.jpg"
+                alt="Photo 3"
+                class="composition__photo composition__photo--p3"
+              />
+            </div>
           </div>
         </div>
+      </section>
 
-    </section>
+      <section class="section-features">
+        <i class="icon-basic-world"></i>
 
+        <div class="row">
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-world"></i>
+              <h3 class="heading-tertiary margin-bottom-small">
+                Explore the world
+              </h3>
+              <p class="feature-box__text">
+                Philanthropy, save the world thought provoking agile blended
+                value equal opportunity compelling. Improve the world activate.
+              </p>
+            </div>
+          </div>
+
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-compass"></i>
+              <h3 class="heading-tertiary margin-bottom-small">
+                Meet the nature
+              </h3>
+              <p class="feature-box__text">
+                Granular white paper triple bottom line revolutionary living a
+                fully ethical life vibrant innovate. Strengthening.
+              </p>
+            </div>
+          </div>
+
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-map"></i>
+              <h3 class="heading-tertiary margin-bottom-small">
+                Find your way
+              </h3>
+              <p class="feature-box__text">
+                Cultivate deep dive ideate dynamic collaborative cities.
+                Mobilize activate citizen-centered empower best practices
+                strategize, venture.
+              </p>
+            </div>
+          </div>
+
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-heart"></i>
+              <h3 class="heading-tertiary margin-bottom-small">
+                Live a healtier life
+              </h3>
+              <p class="feature-box__text">
+                Move the needle segmentation effective, the resistance mobilize
+                compassion communities opportunities.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="section-tours">
+        <div class="center-text margin-bottom-big">
+          <h2 class="heading-secondary margin-bottom-big">
+            Most popular tours
+          </h2>
+        </div>
+
+        <div class="row">
+          <div class="col-1-of-3 card">
+            <div class="card__side card__side--front">
+              <div class="card__picture card__picture--1">
+                &nbsp;
+              </div>
+
+              <h4 class="card__heading">
+                <span class="card__heading-span card__heading-span--1">
+                  The sea explorer
+                </span>
+              </h4>
+
+              <div class="card__details">
+                <ul>
+                  <li>3 day tours</li>
+                  <li>Up to 30 people</li>
+                  <li>2 tour guides</li>
+                  <li>Sleep in cozy hotels</li>
+                  <li>Difficulty:very easy</li>
+                </ul>
+              </div>
+            </div>
+            <div class="card__side card__side--back card__side--back-1">
+              <div class="card__cta">
+                <div class="card__price-box">
+                  <p class="card__price-only">Only</p>
+                  <p class="card__price-value">$279</p>
+                </div>
+                <a href="#" class="btn btn--white">Book now</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-1-of-3 card">
+            <div class="card__side card__side--front">
+              <div class="card__picture card__picture--2">&nbsp;</div>
+              <h4 class="card__heading">
+                <span class="card__heading-span card__heading-span--2">
+                  The forest hiker
+                </span>
+              </h4>
+
+              <div class="card__details">
+                <ul>
+                  <li>7 day tours</li>
+                  <li>Up to 40 people</li>
+                  <li>6 tour guides</li>
+                  <li>Sleep in provided tents</li>
+                  <li>Difficulty:medium</li>
+                </ul>
+              </div>
+            </div>
+            <div class="card__side card__side--back card__side--back-2">
+                <div class="card__cta">
+                    <div class="card__price-box">
+                      <p class="card__price-only">Only</p>
+                      <p class="card__price-value">$399</p>
+                    </div>
+                    <a href="#" class="btn btn--white">Book now</a>
+                  </div>
+            </div>
+          </div>
+          <div class="col-1-of-3 card">
+            <div class="card__side card__side--front">
+              <div class="card__picture card__picture--3">&nbsp;</div>
+
+              <h4 class="card__heading">
+                <span class="card__heading-span card__heading-span--3">
+                  The snow adventurer
+                </span>
+              </h4>
+
+              <div class="card__details">
+                <ul>
+                  <li>5 day tours</li>
+                  <li>Up to 15 people</li>
+                  <li>3 tour guides</li>
+                  <li>Sleep in provided tents</li>
+                  <li>Difficulty:hard</li>
+                </ul>
+              </div>
+            </div>
+            <div class="card__side card__side--back card__side--back-3">
+                <div class="card__cta">
+                    <div class="card__price-box">
+                      <p class="card__price-only">Only</p>
+                      <p class="card__price-value">$479</p>
+                    </div>
+                    <a href="#" class="btn btn--white">Book now</a>
+                  </div>
+            </div>
+          </div>
+        </div>
+        <div class="center-text margin-top-big">
+            <a href="" class="btn btn--green">Discover all tours</a>
+          </div>
+      </section>
     </main>
     <footer></footer>
     <!--   <section class="grid-test">
@@ -132,7 +316,5 @@
             </div>
           </div> 
     </section> -->
-
-    
   </body>
 </html>
